tests/golden/type_errors/match_expression_binding_scope.err
Type error at 7:7: undefined variable `value`
  print value;
        ^
